--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "cron": "bash cron.sh",
-    "migrate-pg-bg-job-queue": "dotenv -e .env.local -- pg-bg-job-queue-cli migrate"
+    "migrate-dataqueue": "dotenv -e .env.local -- dataqueue-cli migrate"
   },
   "dependencies": {
+    "@nicnocquee/dataqueue": "^1.16.0",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -20,7 +21,6 @@
     "next": "^15.3.4",
     "node-pg-migrate": "^8.0.3",
     "pg": "^8.16.3",
-    "pg-bg-job-queue": "^1.13.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1"
@@ -34,6 +34,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
